@@ -71,6 +71,7 @@
 #   define ZMQ_HAVE_UIO 1
 #   define HAVE_CLOCK_GETTIME 1
 #   define HAVE_FORK 1
+#   define HAVE_ACCEPT4 1
 
 #else
 #   error "No platform defined, abandoning"
